[package]
name = "climage"
version = "0.1.0"
authors = ["nekanat <nekanat.stock@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Rust implementation of image processing library with OpenCL."
readme = "README.md"
documentation = "http://neka-nat.github.io/climage/climage/"
homepage = "https://github.com/neka-nat/climage"
repository = "https://github.com/neka-nat/climage"
keywords = ["computer-vision", "OpenCL"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19.4"
image = "0.24.1"
